--- a/src/posts/20011Ave.md
+++ b/src/posts/20011Ave.md
@@ -5,7 +5,7 @@ path: "/200-11"
 date: "2020-07-31"
 coverImage: "../images/20011P2.jpg"
 excerpt: ''
-tags: ["NYC"]
+tags: ["New York", "Apartment"]
 location: "New York"
 type: "Apartment"
 ---
