--- a/src/content/posts/20011Ave.md
+++ b/src/content/posts/20011Ave.md
@@ -1,13 +1,13 @@
 ---
-title: "200 11th Avenue"
+title: '200 11th Avenue'
 published: true
-path: "/200-11"
-date: "2020-07-31"
-coverImage: "../images/20011P2.jpg"
+path: '/200-11'
+date: '2020-07-31'
+coverImage: '../images/20011P2.jpg'
 excerpt: ''
-tags: ["New York", "Apartment"]
-location: "New York"
-type: "Apartment"
+tags: ['New York', 'Apartment']
+location: 'New York'
+type: 'Apartment'
 ---
 
 ![penthouse1](../images/20011P1.jpg)
